--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/responsive.css" />
   </head>
   <body>
     <!-- header area start -->
@@ -22,14 +23,16 @@
             <li><a href="#">Service</a></li>
             <li><a href="#">Contact</a></li>
           </ul>
-        </div>
-        <!-- search area start  -->
-        <div class="search">
-          <input type="text" id="search-box" placeholder="Search ..." />
-          <div id="search-btn">
-            <img src="images/search-icon.png" />
+
+          <!-- search area start  -->
+          <div class="search">
+            <input type="text" id="search-box" placeholder="Search ..." />
+            <div id="search-btn">
+              <img src="images/search-icon.png" />
+            </div>
           </div>
         </div>
+        <div class="toggle-bar"><img src="images/bars-solid.svg" /></div>
         <!-- search area end  -->
         <!-- nav link area end  -->
       </div>
@@ -346,7 +349,7 @@
             </ul>
           </div>
         </div>
-        <!-- testimotial card are end -->
+        <!-- footer card are end -->
       </div>
     </footer>
     <!-- footer are end  -->
