add new css code

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+    />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/responsive.css" />
   </head>
@@ -25,12 +29,15 @@
           </ul>
 
           <!-- search area start  -->
-          <div class="search">
+          <div class="search active">
             <input type="text" id="search-box" placeholder="Search ..." />
             <div id="search-btn">
               <img src="images/search-icon.png" />
             </div>
           </div>
+        </div>
+        <div class="search-bar">
+          <i class="fa-solid fa-magnifying-glass"></i>
         </div>
         <div class="toggle-bar"><img src="images/bars-solid.svg" /></div>
         <!-- search area end  -->
