toggle sestems added

--- a/index.html
+++ b/index.html
@@ -27,19 +27,22 @@
             <li><a href="#">Service</a></li>
             <li><a href="#">Contact</a></li>
           </ul>
-
-          <!-- search area start  -->
-          <div class="search active">
-            <input type="text" id="search-box" placeholder="Search ..." />
-            <div id="search-btn">
-              <img src="images/search-icon.png" />
-            </div>
+        </div>
+        <!-- search area start  -->
+        <div class="search">
+          <input type="text" id="search-box" placeholder="Search ..." />
+          <div id="search-btn">
+            <img src="images/search-icon.png" />
           </div>
         </div>
-        <div class="search-bar">
-          <i class="fa-solid fa-magnifying-glass"></i>
+
+        <div class="navicons">
+          <div class="search-bar">
+            <i class="fa-solid fa-magnifying-glass"></i>
+          </div>
+          <div class="toggle-bar"><img src="images/bars-solid.svg" /></div>
         </div>
-        <div class="toggle-bar"><img src="images/bars-solid.svg" /></div>
+
         <!-- search area end  -->
         <!-- nav link area end  -->
       </div>
@@ -360,5 +363,7 @@
       </div>
     </footer>
     <!-- footer are end  -->
+    <!-- javasript file  -->
+    <script src="js/script.js"></script>
   </body>
 </html>
